--- a/_pages/recommended-products.html
+++ b/_pages/recommended-products.html
@@ -5,7 +5,7 @@ permalink: /products/
 ---
 
 <p>
-Here are a list of books I use and recommend
+Here are a list of products I use and recommend
 </p>
 	<div class="row">
 	<p>Braun Series 3 ProSkin 3020s</p>
