--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@ title: Alain's Tech Blog
 description: Sharing about Application Development, Integration, Cloud, Big Data and Digital Transformation 
 comments: true 
 ---
+
+<!-- Pagination links -->
+<div >
+	{% if paginator.previous_page %}
+		<a href="{{ paginator.previous_page_path }}" >
+		Previous
+		</a>
+	{% else %}
+		<span>Previous</span>
+	{% endif %}
+	| <span class="page_number ">
+		Page: {{ paginator.page }} of {{ paginator.total_pages }}
+	</span> | 
+	{% if paginator.next_page %}
+		<a href="{{ paginator.next_page_path }}" >Next</a>
+	{% else %}
+		<span >Next</span>
+	{% endif %}
+</div>
+
 <div class="list-group">
-	{% for post in site.posts %} 
+	{% for post in paginator.posts %} 
 	<div class="list-group-item">
 	<a href="{{ post.url }}">
 		<h4 class="list-group-item-heading">{{ post.title }}</h4>
@@ -25,3 +45,22 @@ comments: true
 	{% endfor %}
 </div>
 
+<!-- Pagination links -->
+<div >
+{% if paginator.previous_page %}
+	<a href="{{ paginator.previous_page_path }}" >
+	Previous
+	</a>
+{% else %}
+	<span>Previous</span>
+{% endif %}
+| <span class="page_number ">
+	Page: {{ paginator.page }} of {{ paginator.total_pages }}
+</span> | 
+{% if paginator.next_page %}
+	<a href="{{ paginator.next_page_path }}" >Next</a>
+{% else %}
+	<span >Next</span>
+{% endif %}
+</div>
+	  
