--- a/_posts/2019-07-04-quarkus-kafka-camel-servlet-wiring-it-together.html
+++ b/_posts/2019-07-04-quarkus-kafka-camel-servlet-wiring-it-together.html
@@ -10,12 +10,12 @@ github: "https://github.com/alainpham/quarkus-kafka-camel-servlet"
 ---
 
 <p>
-    When using Apache Camel with Quarkus as of today, we are limited number of Camel connectors. One important one being
+    When using Apache Camel with Quarkus as of today, we are limited to a number of Camel connectors. An important one, being
     the Apache Kafka connector.
     The Kafka connector provided through the Smallrye Kafka Extension is available for Quarkus though. So in this
     article, I will show how to
-    wire Smallrye Kafka connector and Camel together.
-    We will also be using the camel-servlet component to reuse the undertow http endpoint provided by Quarkus and to
+    wire the Smallrye Kafka connector and Camel together.
+    We will also be using the camel-servlet component to reuse the undertow http endpoint provided by Quarkus. To
     spice things up a little we will use the XML DSL of Camel.
     All of this will be natively compiled in the end.
 </p>
